--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <strong>Update:</strong> The app will now tell you when your session id has expired. Please see the instructions for more info.
       </div>
       <div class="row">
-        <div class="col-sm">
+        <div id="leftSide" class="col-sm">
           <p></p>
           <form>
             <div class="form-group">
