--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
               <input type="text" class="form-control" id="session-id" placeholder="Paste your session id here">
               <input type="text" class="form-control" id="email" placeholder="Email (optional)">
               <input type="text" class="form-control" id="phone" placeholder="Phone (optional)">
+              <select class="form-control" id="alert-level">
+                <option value="0">No Alerts</option>
+                <option value="4">4* Items or Higher</option>
+                <option value="5">5* Items or Higher</option>
+                <option value="6">6* Items or Higher</option>
+              </select>
             </div>
           </form>
 
           <a class="btn btn-block btn-primary" id="btn-signin" href="#">Sign In</a>
+          <a class="btn btn-block btn-primary" id="btn-signout" href="#" style="display: none;">Sign Out</a>
 
           <a class="btn btn-block btn-primary" id="btn-instructions" href="#">Show Instructions</a>
 
@@ -123,7 +130,7 @@
     </footer>
     
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/index.js?version=1.2"></script>
+    <script src="js/index.js?version=1.3"></script>
     
   </body>
 </html>
