--- a/public/html/talkitout.html
+++ b/public/html/talkitout.html
@@ -5,7 +5,7 @@
       name: window.prompt("What's your name?")
     }
     </script>
-    <script src="/js/talkitout.js"></script>
+    <script src="/js/talkitout.js?ver=1"></script>
     
   </head>
   <body>
