--- a/public/html/talkitout.html
+++ b/public/html/talkitout.html
@@ -2,10 +2,12 @@
   <head>
     <script>
     var _tio_config = {
-      name: window.prompt("What's your name?")
+      // name: window.prompt("What's your name?")
+      name: "Cody",
+      key: null
     }
     </script>
-    <script src="/js/talkitout.js?ver=1"></script>
+    <script src="/js/talkitout.js?ver=1.1"></script>
     
   </head>
   <body>
