--- a/public/html/talkitout.html
+++ b/public/html/talkitout.html
@@ -2,9 +2,10 @@
   <head>
     <script>
     var _tio_config = {
-      // name: window.prompt("What's your name?")
-      name: "Cody",
-      key: null
+      name: window.prompt("What's your name?")
+      // name: "Cody", you can set this from a current user or anything else. If you do, the user won't be prompt for their name
+      // key: null   same. If you omit this entirely, talk it out will generate one for you. If you set it to null, the chat session will not be encrypted
+      // uid: '123423233' if this isn't set, talk it out generates one automatically
     }
     </script>
     <script src="/js/talkitout.js?ver=1.1"></script>
